--- a/src/scss/util/_breakpoints.scss
+++ b/src/scss/util/_breakpoints.scss
@@ -5,6 +5,8 @@ $breakpoints-up:(
     "medium": f.em(960)
 );
 $breakpoints-down:(
+    'xsmall': f.em(535.98),
+    'small': f.em(639.98),
     "medium": f.em(959.98)
 );
 
@@ -14,7 +16,7 @@ $breakpoints-down:(
     }
 }
 @mixin breakpoint-down($size) {
-    @media (max-width: map-get($breakpoints-up, $size)) {
+    @media (max-width: map-get($breakpoints-down, $size)) {
         @content;
     }
 }
