--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -19,6 +19,10 @@
                 grid-template-columns: repeat(2, 1fr);
                 row-gap: 5rem;
             }
+                @include u.breakpoint-down(small){
+                    grid-template-columns: repeat(1, 1fr);
+                    row-gap: 4rem;
+  }
             .footer__boost, .footer__support, .footer__tikroyal{
                 display: flex;
                 flex-direction: column;
