--- a/src/scss/layout/_services.scss
+++ b/src/scss/layout/_services.scss
@@ -10,6 +10,9 @@
         h2{
             font-size: u.rem(36);
             padding: 1rem 0;
+            @include u.breakpoint-down(small){
+                font-size: u.rem(34)
+            }
         }
         .desc{
             font-size: u.rem(22);
@@ -22,14 +25,20 @@
             @include u.breakpoint-down(medium){
                 font-size: u.rem(21);
             }
+            @include u.breakpoint-down(small){
+                font-size: u.rem(18);
+                width: 70%;
+            }
         }
     }
     &__content{
         display: grid;
         grid-template-columns: 1fr 1fr;
-        gap: 5rem;
+        gap: u.rem(50);
         padding: 3rem 0;
-        
+        @include u.breakpoint-down(small){
+            gap: u.rem(30);
+        }
         .growth__section, .trust__section, .package__section, .shipping__section{
             display: flex;
             flex-direction: column;
@@ -42,6 +51,12 @@
                     margin-bottom: 1rem;
                     width: 40%;
                 }
+                @include u.breakpoint-down(small){
+                    width: 50%;
+                }
+                @include u.breakpoint-down(xsmall){
+                    width: 45%;
+                }
                 &::after{
                     content:"";
                     position: absolute;
@@ -52,6 +67,11 @@
                     top:u.rem(10);
                     left: u.rem(-10);
                     z-index: -1;
+                    @include u.breakpoint-down(xsmall){
+                        width: u.rem(50);
+                        height: u.rem(50);
+                        border-radius: u.rem(15);
+                    }
                 }
 
             }
@@ -60,6 +80,12 @@
                 color: g.$black;
                 @include u.breakpoint-down(medium){
                    font-size: u.rem(30);
+                }
+                @include u.breakpoint-down(small){
+                    font-size: u.rem(28);
+                }
+                @include u.breakpoint-down(xsmall){
+                    font-size: u.rem(24);
                 }
             }
             .about{
@@ -71,6 +97,14 @@
                     font-size: u.rem(20);
                     width: 85%;
                     line-height: 1.3;
+                }
+                @include u.breakpoint-down(small){
+                    font-size: u.rem(18);
+                    line-height: 1.5;
+                }
+                @include u.breakpoint-down(xsmall){
+                    font-size: u.rem(16);
+                    width: 100%;
                 }
             }
         }
