--- a/src/scss/layout/_support.scss
+++ b/src/scss/layout/_support.scss
@@ -10,6 +10,10 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 8rem;
+    @include u.breakpoint-down(small){
+      grid-template-columns: 1fr;
+      gap: 4rem;
+    }
     .support__text {
       .title {
         display: flex;
@@ -42,6 +46,7 @@
         flex-direction: column;
         row-gap: 1rem;
         padding: 1rem 0;
+       
         p {
           font-size: u.rem(22);
           color: g.$gray;
@@ -49,6 +54,9 @@
           width: 80%;
           line-height: 1.35;
           letter-spacing: 0.9;
+          @include u.breakpoint-down(small){
+            font-size: u.rem(18)
+          }
         }
       }
       .cta {
@@ -82,10 +90,13 @@
         justify-content: center;
         position: relative;
         z-index: 20;
+        @include u.breakpoint-down(small){
+          margin-inline: auto;
+        }
         @include u.breakpoint-down(medium){
             margin-top: u.rem(80);
-            width: 240px;
-            height: 240px;
+            width: 260px;
+            height: 260px;
         }
         .star-icon{
             font-size: u.rem(65);
@@ -123,13 +134,25 @@
                 height: 280px;
                 top: u.rem(-300);
                 left: u.rem(0);
-            }
+              }
+              @include u.breakpoint-down(small){
+                left: u.rem(2);
+              }
+              @include u.breakpoint-down(xsmall){
+                left: u.rem(1);
+              }
             .video1{
                 width:55%;
                 height:55%;
                 object-fit:cover;
                 border-radius: 0.85rem;
                 position: relative;
+                @include u.breakpoint-down(small){
+                  width: 35%;
+                }
+                @include u.breakpoint-down(xsmall){
+                  width: 50%;
+                }
             }
             .content{
                 color: g.$white;
@@ -143,6 +166,10 @@
                 @include u.breakpoint-down(medium){
                     font-size: u.rem(16);
                     top: u.rem(130);
+                }
+                @include u.breakpoint-down(small){
+                    font-size: u.rem(15);
+                    left: u.rem(16);
                 }
             }
         }
@@ -158,11 +185,23 @@
                 top: u.rem(-200);
                 right: u.rem(60);
             }
+            @include u.breakpoint-down(small){
+              right: u.rem(50);
+            }
+            @include u.breakpoint-down(xsmall){
+              width: 35%;
+              height: 130px;
+              top: u.rem(-240);
+              right: u.rem(0);
+            }
             .video2{
                 width:100%;
                 height:100%;
                 object-fit:cover;
                 border-radius: 0.85rem;
+                @include u.breakpoint-down(small){
+                  width: 90%;
+                }
             }
             .content{
                 color: g.$white;
@@ -178,6 +217,10 @@
                     top: u.rem(95);
                     left: u.rem(10);
                 }
+                @include u.breakpoint-down(xsmall){
+                  font-size: u.rem(14);
+                  top: u.rem(100);
+                }
             }
         }
         .vid3{
@@ -192,11 +235,21 @@
                 left: u.rem(-10);
                 bottom: u.rem(-30);
             }
+            @include u.breakpoint-down(small){
+              left: u.rem(0);
+            }
+            @include u.breakpoint-down(xsmall){
+              left: u.rem(10);
+              width: 35%;
+            }
             .video3{
                 width:100%;
                 height:100%;
                 object-fit:cover;
                 border-radius: 0.85rem;
+                @include u.breakpoint-down(small){
+                  height: 110%;
+                }
             }
             .content{
                 color: g.$white;
@@ -212,6 +265,12 @@
                     top: u.rem(100);
                     left: u.rem(10);
                 }
+                @include u.breakpoint-down(small){
+                  top: u.rem(110);
+                }
+                @include u.breakpoint-down(small){
+                  font-size: u.rem(14);
+                }
             }
         }
         .vid4{
@@ -225,6 +284,16 @@
                 height: 130px;
                 right: u.rem(75);
                 bottom: u.rem(-75);
+            }
+            @include u.breakpoint-down(small){
+              width: 30%;
+              height: 140px;
+              right: u.rem(100);
+              bottom: u.rem(-90);
+            }
+            @include u.breakpoint-down(xsmall){
+              width: 35%;
+              right: u.rem(40);
             }
             .video4{
                 width:100%;
@@ -245,6 +314,10 @@
                     font-size: u.rem(16);
                     top: u.rem(105);
                     left: u.rem(10);
+                }
+                @include u.breakpoint-down(small){
+                  top: u.rem(115);
+                  font-size: u.rem(14);
                 }
             }
         }
