added some styles

--- a/src/scss/layout/_sale.scss
+++ b/src/scss/layout/_sale.scss
@@ -6,11 +6,20 @@
     width: 100%;
     background-color: g.$secondary;
     color: g.$white;
-    padding: 0.75rem 0;
+    padding: 0.5rem 0;
     z-index: 999;
     p{
         font-size: u.rem(19);
         text-align: center;
         letter-spacing: u.rem(1);
+    }
+    @include u.breakpoint-down(medium){
+        font-size: u.rem(16);
+    }
+    @include u.breakpoint-down(small){
+        font-size: u.rem(14);
+    }
+    @include u.breakpoint-down(xsmall){
+        font-size: u.rem(12);
     }
 }
